[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/SpaceShooterRedux/PNG/ufoGreen.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemy_path.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/SpaceShooterRedux/Bonus/sfx_laser2.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 45.1774

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="enemy" type="Area2D"]
position = Vector2( 992, 473 )
collision_layer = 4
collision_mask = 17
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 0.5
method_call_mode = 1
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 4 )
anims/rotate = SubResource( 3 )

[node name="enemy_paths" parent="." instance=ExtResource( 3 )]

[node name="visible" type="VisibilityNotifier2D" parent="."]

[node name="shoot_timer" type="Timer" parent="."]

[node name="bullet_container" type="Node" parent="."]

[node name="sounds" type="Node" parent="."]

[node name="enemy_laser" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource( 4 )

[connection signal="screen_exited" from="visible" to="." method="_on_visible_screen_exited"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
